# MineSweeperProb

./: .gitattributes  .gitignore  CITATION.cff  Makefile  MineSweeperProb.sln  README.md  compile.sh
MWFast/: MWFast.sln  MWFast.vcxproj  MWFast.vcxproj.filters  base_logic.h  basic_logic.cpp  basic_logic.h  binomial.cpp  binomial.h  block.cpp  block.h  common.h  fast_full_logic.cpp  fast_full_logic.h  full_logic.cpp  full_logic.h  game.cpp  game.h  grid.h  heuristic.cpp  heuristic.h  lp.cpp  lp.h  main.cpp  speculative.cpp  speculative.h  strategy.cpp  strategy.h
MineSweeper/: Block.cs  Configuration.Designer.cs  Configuration.cs  Form1.Designer.cs  Form1.cs  GameMgr.cs  GameMgrBuffered.cs  MineSweeper.Designer.cs  MineSweeper.cs  MineSweeper.csproj  Program.cs  UIBlock.cs
MineSweeper/Properties/: AssemblyInfo.cs
MineSweeperAnalyzer/: Block.cs  MineSweeperAnalyzer.csproj  Program.cs  Tester.cs
MineSweeperAnalyzer/Properties/: AssemblyInfo.cs
MineSweeperCalc/: Block.cs  BlockFamily.cs  BlockManager.cs  BlockSet.cs  BlockStatus.cs  Drainer.cs  GameMgr.cs  IBlock.cs  Manipulator.cs  MineSweeperCalc.csproj  Numeric.cs  Restrain.cs  Solution.cs  Solver.cs  Strategies.cs
MineSweeperCalc/Properties/: AssemblyInfo.cs
MineSweeperCalc/Solver/: BlockManager.cs  BlockSet.cs  BlockStatus.cs  IBlock.cs  Numeric.cs  OrthogonalList.cs  Solution.cs  Solver.Distribution.cs  Solver.cs
MineSweeperDemo/: GacUI.cpp  GacUI.h  GacUIWindows.cpp  GacUIWindows.h  MineSweeperDemo.cpp  MineSweeperDemo.h  MineSweeperDemo.vcxproj  MineSweeperDemo.vcxproj.filters  ReadStrategy.cpp  Vlpp.cpp  Vlpp.h  main.cpp
MineSweeperProver/: MineSweeperProver.cpp  MineSweeperProver.vcxproj  MineSweeperProver.vcxproj.filters  ReadMe.txt  stdafx.cpp
MineSweeperSimulator/: MineSweeperSimulator.cpp  MineSweeperSimulator.vcxproj  MineSweeperSimulator.vcxproj.filters  ReadMe.txt  StreamChuck.cpp  StreamChuck.h  ThreadPool.h  stdafx.h
MineSweeperSolver/: BasicDrainer.cpp  BasicDrainer.h  BasicSolver.cpp  BasicSolver.h  BigInteger.cpp  BigInteger.h  BinomialHelper.cpp  BinomialHelper.h  CMakeLists.txt  Drainer.cpp  Drainer.h  GameMgr.cpp  GameMgr.h  Makefile  MineSweeperSolver.vcxproj  MineSweeperSolver.vcxproj.filters  OrthogonalList.h  Prover.cpp  Prover.h  ReadStrategy.cpp  ReadStrategy.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  Strategies.cpp  Strategies.h  base64.cpp  base64.h  dllmain.cpp  facade.cpp  facade.hpp  main.cpp  random.cpp  random.h  stdafx.h  wasm.cpp
MineSweeperSpeed/: MineSweeperSpeed.cpp  MineSweeperSpeed.vcxproj  MineSweeperSpeed.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
MineSweeperWorker/: AdapterWorker.cpp  AdapterWorker.h  BaseBaseWorker.cpp  BaseBaseWorker.h  BaseWorker.cpp  BaseWorker.h  BaseWorkerT.cpp  BaseWorkerT.h  Configuration.h  Makefile  Worker.cpp  Worker.h  WorkerT.cpp  WorkerT.h  dllmain.cpp  main.cpp  stdafx.h
ResultParser/: ResultParser.vcxproj  main.cpp
SimulatorManagerClient/: Program.cs  SimulatorManagerClient.csproj  StreamChuck.cs
SimulatorManagerClient/Properties/: AssemblyInfo.cs
SimulatorsManager/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  SimpleHttpServer.cs  Simulator.cs  SimulatorsManager.cs  SimulatorsManager.csproj  frmMain.Designer.cs  frmMain.cs
SimulatorsManager/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
SimulatorsManager/wwwroot/: default.html
old/MineSweeper/: Configuration.Designer.cs  Configuration.cs  Program.cs  UIBlock.cs
old/MineSweeperDemo/: ReadStrategy.h  main.cpp
postprocess/: CMakeLists.txt  fmt.cpp  fmt.hpp  main.cpp  process.mjs  test.cpp
result/: process.mjs
src/: BasicSolver.cpp  BasicSolver.h  Drainer.cpp  Solver.h  Strategies.h  random.cpp  random.h
website/: .gitignore  package-lock.json  package.json
website/public/: MineSweeperSolver.wasm  index.css  index.html
website/src/: App.css  App.js  Block.js  Board.js  Control.js  Game.js  HeatBar.js  MineSweeperSolver.js  index.css  index.js
(+2 files in other folders)
